--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,3 +31,5 @@ jobs:
       - run: cat ~/.aws/credentials
       - run: aws configure list-profiles
       - run: aws s3 ls --region eu-central-1 --profile techstarter
+      - uses: hashicorp/setup-terraform@v2
+      - run: terraform version
